Created main interations, fixes, and improvements